--- a/prjinfox/src/main/java/com/mycompany/infox/telas/TelaUsuario.form
+++ b/prjinfox/src/main/java/com/mycompany/infox/telas/TelaUsuario.form
@@ -256,6 +256,9 @@
           <Dimension value="[80, 80]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeleteUserActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
