--- a/prjinfox/src/main/java/com/mycompany/infox/telas/TelaCliente.form
+++ b/prjinfox/src/main/java/com/mycompany/infox/telas/TelaCliente.form
@@ -207,6 +207,9 @@
           <Dimension value="[80, 80]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRemoverActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNomeCliente">
     </Component>
