--- a/prjinfox/src/main/java/com/mycompany/infox/telas/TelaOs.form
+++ b/prjinfox/src/main/java/com/mycompany/infox/telas/TelaOs.form
@@ -472,6 +472,9 @@
         </Property>
         <Property name="horizontalTextPosition" type="int" value="0"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAlterarOsActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnExcluirOs">
       <Properties>
